ribbit/tests/ui/mismatch_nonzero.stderr
error[E0277]: the trait bound `A: ribbit::NonZero` is not satisfied
 --> tests/ui/mismatch_nonzero.rs:9:8
  |
9 |     a: A,
  |        ^ the trait `ribbit::NonZero` is not implemented for `A`
  |
  = help: the following other types implement trait `ribbit::NonZero`:
            std::num::NonZero<i128>
            std::num::NonZero<i16>
            std::num::NonZero<i32>
            std::num::NonZero<i64>
            std::num::NonZero<i8>
            std::num::NonZero<u128>
            std::num::NonZero<u16>
            std::num::NonZero<u32>
          and $N others
note: required by a bound in `assert_impl_all`
 --> tests/ui/mismatch_nonzero.rs:5:1
  |
5 | #[ribbit::pack(size = 32)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
  = note: this error originates in the macro `::ribbit::private::assert_impl_all` which comes from the expansion of the attribute macro `ribbit::pack` (in Nightly builds, run with -Z macro-backtrace for more info)
